styling fixes, spacing and title h1 recipe size change

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -152,12 +152,8 @@ span.bottomtip {
   padding-bottom: 25px;
 }
 
-.recipe-title {
-  margin-bottom: 25px;
-}
-
 .recipe-title h1 {
-  font-size: 28px;
+  font-size: 25px;
 }
 
 .recipe-content h2 {
